@@ -10,12 +10,13 @@ package org.elasticsearch.cluster.routing;
 
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.common.ExponentiallyWeightedMovingAverage;
-import org.elasticsearch.common.util.CollectionUtils;
-import org.elasticsearch.core.Nullable;
 import org.elasticsearch.common.Randomness;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
+import org.elasticsearch.common.util.CollectionUtils;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.set.Sets;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.node.ResponseCollectorService;
@@ -24,7 +25,6 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -62,7 +62,7 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
     IndexShardRoutingTable(ShardId shardId, List<ShardRouting> shards) {
         this.shardId = shardId;
         this.shuffler = new RotationShardShuffler(Randomness.get().nextInt());
-        this.shards = Collections.unmodifiableList(shards);
+        this.shards = List.copyOf(shards);
 
         ShardRouting primary = null;
         List<ShardRouting> replicas = new ArrayList<>();
@@ -73,6 +73,7 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
         boolean allShardsStarted = true;
         for (ShardRouting shard : shards) {
             if (shard.primary()) {
+                assert primary == null : "duplicate primary: " + primary + " vs " + shard;
                 primary = shard;
             } else {
                 replicas.add(shard);
@@ -239,20 +240,22 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
      * selection formula. Making sure though that its random within the active shards of the same
      * (or missing) rank, and initializing shards are the last to iterate through.
      */
-    public ShardIterator activeInitializingShardsRankedIt(@Nullable ResponseCollectorService collector,
-                                                          @Nullable Map<String, Long> nodeSearchCounts) {
+    public ShardIterator activeInitializingShardsRankedIt(
+        @Nullable ResponseCollectorService collector,
+        @Nullable Map<String, Long> nodeSearchCounts
+    ) {
         final int seed = shuffler.nextSeed();
         if (allInitializingShards.isEmpty()) {
-            return new PlainShardIterator(shardId,
-                    rankShardsAndUpdateStats(shuffler.shuffle(activeShards, seed), collector, nodeSearchCounts));
+            return new PlainShardIterator(
+                shardId,
+                rankShardsAndUpdateStats(shuffler.shuffle(activeShards, seed), collector, nodeSearchCounts)
+            );
         }
 
         ArrayList<ShardRouting> ordered = new ArrayList<>(activeShards.size() + allInitializingShards.size());
-        List<ShardRouting> rankedActiveShards =
-                rankShardsAndUpdateStats(shuffler.shuffle(activeShards, seed), collector, nodeSearchCounts);
+        List<ShardRouting> rankedActiveShards = rankShardsAndUpdateStats(shuffler.shuffle(activeShards, seed), collector, nodeSearchCounts);
         ordered.addAll(rankedActiveShards);
-        List<ShardRouting> rankedInitializingShards =
-                rankShardsAndUpdateStats(allInitializingShards, collector, nodeSearchCounts);
+        List<ShardRouting> rankedInitializingShards = rankShardsAndUpdateStats(allInitializingShards, collector, nodeSearchCounts);
         ordered.addAll(rankedInitializingShards);
         return new PlainShardIterator(shardId, ordered);
     }
@@ -265,19 +268,23 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
         return nodeIds;
     }
 
-    private static Map<String, Optional<ResponseCollectorService.ComputedNodeStats>>
-        getNodeStats(final Set<String> nodeIds, final ResponseCollectorService collector) {
+    private static Map<String, Optional<ResponseCollectorService.ComputedNodeStats>> getNodeStats(
+        final Set<String> nodeIds,
+        final ResponseCollectorService collector
+    ) {
 
-        final Map<String, Optional<ResponseCollectorService.ComputedNodeStats>> nodeStats = new HashMap<>(nodeIds.size());
+        final Map<String, Optional<ResponseCollectorService.ComputedNodeStats>> nodeStats = Maps.newMapWithExpectedSize(nodeIds.size());
         for (String nodeId : nodeIds) {
             nodeStats.put(nodeId, collector.getNodeStatistics(nodeId));
         }
         return nodeStats;
     }
 
-    private static Map<String, Double> rankNodes(final Map<String, Optional<ResponseCollectorService.ComputedNodeStats>> nodeStats,
-                                                 final Map<String, Long> nodeSearchCounts) {
-        final Map<String, Double> nodeRanks = new HashMap<>(nodeStats.size());
+    private static Map<String, Double> rankNodes(
+        final Map<String, Optional<ResponseCollectorService.ComputedNodeStats>> nodeStats,
+        final Map<String, Long> nodeSearchCounts
+    ) {
+        final Map<String, Double> nodeRanks = Maps.newMapWithExpectedSize(nodeStats.size());
         for (Map.Entry<String, Optional<ResponseCollectorService.ComputedNodeStats>> entry : nodeStats.entrySet()) {
             Optional<ResponseCollectorService.ComputedNodeStats> maybeStats = entry.getValue();
             maybeStats.ifPresent(stats -> {
@@ -299,10 +306,12 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
      * the winning node had a queue size of 10 and a non-winning node had a queue of 18. The average queue size is (10 + 18) / 2 = 14 so the
      * non-winning node will have statistics added for a queue size of 14. This is repeated for the response time and service times as well.
      */
-    private static void adjustStats(final ResponseCollectorService collector,
-                                    final Map<String, Optional<ResponseCollectorService.ComputedNodeStats>> nodeStats,
-                                    final String minNodeId,
-                                    final ResponseCollectorService.ComputedNodeStats minStats) {
+    private static void adjustStats(
+        final ResponseCollectorService collector,
+        final Map<String, Optional<ResponseCollectorService.ComputedNodeStats>> nodeStats,
+        final String minNodeId,
+        final ResponseCollectorService.ComputedNodeStats minStats
+    ) {
         if (minNodeId != null) {
             for (Map.Entry<String, Optional<ResponseCollectorService.ComputedNodeStats>> entry : nodeStats.entrySet()) {
                 final String nodeId = entry.getKey();
@@ -313,7 +322,9 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
                     final long updatedResponse = (long) (minStats.responseTime + stats.responseTime) / 2;
 
                     ExponentiallyWeightedMovingAverage avgServiceTime = new ExponentiallyWeightedMovingAverage(
-                        ResponseCollectorService.ALPHA, stats.serviceTime);
+                        ResponseCollectorService.ALPHA,
+                        stats.serviceTime
+                    );
                     avgServiceTime.addValue((minStats.serviceTime + stats.serviceTime) / 2);
                     final long updatedService = (long) avgServiceTime.getAverage();
 
@@ -323,8 +334,11 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
         }
     }
 
-    private static List<ShardRouting> rankShardsAndUpdateStats(List<ShardRouting> shards, final ResponseCollectorService collector,
-                                                               final Map<String, Long> nodeSearchCounts) {
+    private static List<ShardRouting> rankShardsAndUpdateStats(
+        List<ShardRouting> shards,
+        final ResponseCollectorService collector,
+        final Map<String, Long> nodeSearchCounts
+    ) {
         if (collector == null || nodeSearchCounts == null || shards.size() <= 1) {
             return shards;
         }
@@ -423,7 +437,7 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
     }
 
     public ShardIterator onlyNodeSelectorActiveInitializingShardsIt(String nodeAttributes, DiscoveryNodes discoveryNodes) {
-        return onlyNodeSelectorActiveInitializingShardsIt(new String[] {nodeAttributes}, discoveryNodes);
+        return onlyNodeSelectorActiveInitializingShardsIt(new String[] { nodeAttributes }, discoveryNodes);
     }
 
     /**
@@ -446,11 +460,12 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
         }
         if (ordered.isEmpty()) {
             final String message = String.format(
-                    Locale.ROOT,
-                    "no data nodes with %s [%s] found for shard: %s",
-                    nodeAttributes.length == 1 ? "criteria" : "criterion",
-                    String.join(",", nodeAttributes),
-                    shardId());
+                Locale.ROOT,
+                "no data nodes with %s [%s] found for shard: %s",
+                nodeAttributes.length == 1 ? "criteria" : "criterion",
+                String.join(",", nodeAttributes),
+                shardId()
+            );
             throw new IllegalArgumentException(message);
         }
         return new PlainShardIterator(shardId, ordered);
@@ -515,24 +530,7 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
         return allAllocationIds;
     }
 
-    static class AttributesKey {
-
-        final List<String> attributes;
-
-        AttributesKey(List<String> attributes) {
-            this.attributes = attributes;
-        }
-
-        @Override
-        public int hashCode() {
-            return attributes.hashCode();
-        }
-
-        @Override
-        public boolean equals(Object obj) {
-            return obj instanceof AttributesKey && attributes.equals(((AttributesKey) obj).attributes);
-        }
-    }
+    record AttributesKey(List<String> attributes) {}
 
     public ShardRouting primaryShard() {
         return primary;
@@ -569,7 +567,7 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
 
     public static class Builder {
 
-        private ShardId shardId;
+        private final ShardId shardId;
         private final List<ShardRouting> shards;
 
         public Builder(IndexShardRoutingTable indexShard) {
@@ -583,6 +581,7 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
         }
 
         public Builder addShard(ShardRouting shardEntry) {
+            assert shardEntry.shardId().equals(shardId) : "cannot add [" + shardEntry + "] to routing table for " + shardId;
             shards.add(shardEntry);
             return this;
         }
@@ -595,7 +594,8 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
         public IndexShardRoutingTable build() {
             // don't allow more than one shard copy with same id to be allocated to same node
             assert distinctNodes(shards) : "more than one shard with same id assigned to same node (shards: " + shards + ")";
-            return new IndexShardRoutingTable(shardId, List.copyOf(shards));
+            assert noDuplicatePrimary(shards) : "expected but did not find unique primary in shard routing table: " + shards;
+            return new IndexShardRoutingTable(shardId, shards);
         }
 
         static boolean distinctNodes(List<ShardRouting> shards) {
@@ -612,6 +612,21 @@ public class IndexShardRoutingTable implements Iterable<ShardRouting> {
                     }
                 }
             }
+            return true;
+        }
+
+        static boolean noDuplicatePrimary(List<ShardRouting> shards) {
+            boolean seenPrimary = false;
+            for (final var shard : shards) {
+                if (shard.primary()) {
+                    if (seenPrimary) {
+                        return false;
+                    }
+                    seenPrimary = true;
+                }
+            }
+            // We should be able to return seenPrimary here, but in tests there are many routing tables with no primary (e.g. empty) so for
+            // now we leniently allow there to be no primary as well. TODO fix those tests and stop being lenient here.
             return true;
         }
 
