@@ -12,10 +12,10 @@ import org.elasticsearch.ElasticsearchExceptionTests;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.index.mapper.TimeSeriesParams;
+import org.elasticsearch.test.AbstractWireSerializingTestCase;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentType;
-import org.elasticsearch.test.AbstractWireSerializingTestCase;
 import org.hamcrest.Matchers;
 
 import java.io.IOException;
@@ -60,25 +60,26 @@ public class FieldCapabilitiesResponseTests extends AbstractWireSerializingTestC
         for (String field : fields) {
             responses.put(field, randomFieldCaps(field));
         }
-        return new FieldCapabilitiesIndexResponse(index, responses, canMatch);
+        return new FieldCapabilitiesIndexResponse(index, null, responses, canMatch);
     }
 
     public static IndexFieldCapabilities randomFieldCaps(String fieldName) {
-        Map<String, String> meta;
-        switch (randomInt(2)) {
-            case 0:
-                meta = Collections.emptyMap();
-                break;
-            case 1:
-                meta = Map.of("key", "value");
-                break;
-            default:
-                meta = Map.of("key1", "value1", "key2", "value2");
-                break;
-        }
+        Map<String, String> meta = switch (randomInt(2)) {
+            case 0 -> Collections.emptyMap();
+            case 1 -> Map.of("key", "value");
+            default -> Map.of("key1", "value1", "key2", "value2");
+        };
 
-        return new IndexFieldCapabilities(fieldName, randomAlphaOfLengthBetween(5, 20),
-            randomBoolean(), randomBoolean(), randomBoolean(), randomBoolean(), randomFrom(TimeSeriesParams.MetricType.values()), meta);
+        return new IndexFieldCapabilities(
+            fieldName,
+            randomAlphaOfLengthBetween(5, 20),
+            randomBoolean(),
+            randomBoolean(),
+            randomBoolean(),
+            randomBoolean(),
+            randomFrom(TimeSeriesParams.MetricType.values()),
+            meta
+        );
     }
 
     @Override
@@ -88,22 +89,24 @@ public class FieldCapabilitiesResponseTests extends AbstractWireSerializingTestC
         int mutation = response.get().isEmpty() ? 0 : randomIntBetween(0, 2);
 
         switch (mutation) {
-            case 0:
+            case 0 -> {
                 String toAdd = randomAlphaOfLength(10);
-                mutatedResponses.put(toAdd, Collections.singletonMap(
-                    randomAlphaOfLength(10),
-                    FieldCapabilitiesTests.randomFieldCaps(toAdd)));
-                break;
-            case 1:
+                mutatedResponses.put(
+                    toAdd,
+                    Collections.singletonMap(randomAlphaOfLength(10), FieldCapabilitiesTests.randomFieldCaps(toAdd))
+                );
+            }
+            case 1 -> {
                 String toRemove = randomFrom(mutatedResponses.keySet());
                 mutatedResponses.remove(toRemove);
-                break;
-            case 2:
+            }
+            case 2 -> {
                 String toReplace = randomFrom(mutatedResponses.keySet());
-                mutatedResponses.put(toReplace, Collections.singletonMap(
-                    randomAlphaOfLength(10),
-                    FieldCapabilitiesTests.randomFieldCaps(toReplace)));
-                break;
+                mutatedResponses.put(
+                    toReplace,
+                    Collections.singletonMap(randomAlphaOfLength(10), FieldCapabilitiesTests.randomFieldCaps(toReplace))
+                );
+            }
         }
         return new FieldCapabilitiesResponse(null, mutatedResponses, Collections.emptyList());
     }
@@ -151,7 +154,7 @@ public class FieldCapabilitiesResponseTests extends AbstractWireSerializingTestC
         List<FieldCapabilitiesFailure> failures = new ArrayList<>();
         for (String index : indices) {
             if (randomBoolean() || failures.size() == 0) {
-                failures.add(new FieldCapabilitiesFailure(new String[] {index}, ElasticsearchExceptionTests.randomExceptions().v2()));
+                failures.add(new FieldCapabilitiesFailure(new String[] { index }, ElasticsearchExceptionTests.randomExceptions().v2()));
             } else {
                 failures.get(failures.size() - 1).addIndex(index);
             }
